<resources>
    <string name="app_name">DeThi2</string>

    <string name="home_text">Nguyễn Tuấn Tú - 63135967 : Final Test</string>
    <string name="profile_text">Profile</string>
    <string name="cau1_text">CÔNG CỤ ĐỔI ĐƠN VỊ</string>
    <string name="cau2_text">Câu 2</string>
    <string name="cau3_text">Câu 3</string>
    <string name="cau4_text">Câu 4</string>

    <string name="name">Nguyễn Tuấn Tú</string>
    <string name="about">Về tôi</string>
    <string name="bio">Chuyên về lập trình Java</string>
    <string name="user_information">Thông tin cá nhân</string>
    <string name="username">Tên người dùng</string>
    <string name="mssv">MSSV</string>
    <string name="masv">63135967</string>
    <string name="tentk">ngtuantu1202</string>
    <string name="gender">Giới tính</string>
    <string name="gtinh">Nam</string>
    <string name="age">Tuổi</string>
    <string name="tuoi">21</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="ngsinh">12/02/2003</string>
    <string name="mobile">SĐT</string>
    <string name="sdt">+84 962071416</string>
    <string name="email">Email</string>
    <string name="gmail">tu.nt.63cntt@ntu.edu.vn</string>
    <string name="social">Mạng xã hội</string>

    <string name="github">Github</string>
    <string name="zalo">Zalo</string>
    <string name="mail">Mail</string>


</resources>